jomini_derive/tests/compile-fail/borrow_with_duplicated_and_take_last.rs
use jomini_derive::JominiDeserialize;
use std::borrow::Cow;

#[derive(JominiDeserialize)]
struct BadStruct<'a> {
    #[jomini(borrow, duplicated, take_last)]
    field: Vec<Cow<'a, str>>,
}

fn main() {}